chore: import new transaction metadata entity